--- a/src/main/resources/templates/content-index.html
+++ b/src/main/resources/templates/content-index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html>
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
     <!-- 页面meta -->
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>ITCAST - AdminLTE2定制版</title>
+    <title>首页</title>
     <meta name="description" content="AdminLTE2定制版">
     <meta name="keywords" content="AdminLTE2定制版">
     <!-- Tell the browser to be responsive to screen width -->
@@ -103,125 +103,10 @@
 <body class="hold-transition skin-blue sidebar-mini">
 <div class="wrapper">
     <!-- 页面头部 -->
-    <header class="main-header">
-        <!-- Logo -->
-        <a href="all-admin-index.html" class="logo">
-            <!-- mini logo for sidebar mini 50x50 pixels -->
-            <span class="logo-mini"><b>数据</b></span>
-            <!-- logo for regular state and mobile devices -->
-            <span class="logo-lg"><b>数据</b>后台管理</span>
-        </a>
-        <!-- Header Navbar: style can be found in header.less -->
-        <nav class="navbar navbar-static-top">
-            <!-- Sidebar toggle button-->
-            <a href="#" class="sidebar-toggle" data-toggle="offcanvas" role="button">
-                <span class="sr-only">Toggle navigation</span>
-            </a>
-            <div class="navbar-custom-menu">
-                <ul class="nav navbar-nav">
-                    <li class="dropdown user user-menu">
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-                            <img src="/img/user2-160x160.jpg" class="user-image" alt="User Image">
-                            <span class="hidden-xs">黑马</span>
-                        </a>
-                        <ul class="dropdown-menu">
-                            <!-- User image -->
-                            <li class="user-header">
-                                <img src="/img/user2-160x160.jpg" class="imgcircle"
-                                     alt="User Image">
-                                <p>
-                                    黑马 - 数据管理员
-                                    <small>最后登录 11:20AM</small>
-                                </p>
-                            </li>
-                            <!-- Menu Footer-->
-                            <li class="user-footer">
-                                <div class="pull-left">
-                                    <a href="#" class="btn btn-default btn-flat"
-                                    >修改密码</a>
-                                </div>
-                                <div class="pull-right">
-                                    <a href="#" class="btn btn-default btn-flat"
-                                    >注销</a>
-                                </div>
-                            </li>
-                        </ul>
-                    </li>
-                </ul>
-            </div>
-        </nav>
-    </header>
+    <div th:replace="header.html"></div>
     <!-- 页面头部 /-->
     <!-- 导航侧栏 -->
-    <aside class="main-sidebar">
-        <!-- sidebar: style can be found in sidebar.less -->
-        <section class="sidebar">
-            <!-- Sidebar user panel -->
-            <div class="user-panel">
-                <div class="pull-left image">
-                    <img src="/img/user2-160x160.jpg" class="img-circle" alt="User Image">
-                </div>
-                <div class="pull-left info">
-                    <p>黑马</p>
-                    <a href="#"><i class="fa fa-circle text-success"></i> 在线</a>
-                </div>
-            </div>
-            <!-- sidebar menu: : style can be found in sidebar.less -->
-            <ul class="sidebar-menu">
-                <li class="header">菜单</li>
-                <li id="admin-index">
-                    <a href="all-admin-index.html"><i class="fa fa-dashboard"></i> <span>首页</span></a>
-                </li>
-                <li class="treeview">
-                    <a href="#">
-                        <i class="fa fa-cogs"></i> <span>系统管理</span>
-                        <span class="pull-right-container"><i class="fa fa-angle-left pull-right"></i></span>
-                    </a>
-                    <ul class="treeview-menu">
-                        <li id="system-setting">
-                            <a href="all-admin-userlist.html">
-                                <i class="fa fa-circle-o"></i> 用户管理
-                            </a>
-                        </li>
-                        <li id="system-setting">
-                            <a href="all-admin-rolelist.html">
-                                <i class="fa fa-circle-o"></i> 角色管理
-                            </a>
-                        </li>
-                        <li id="system-setting">
-                            <a href="all-admin-resourceslist.html">
-                                <i class="fa fa-circle-o"></i> 资源权限管理
-                            </a>
-                        </li>
-                        <li id="system-setting">
-                            <a href="all-admin-logslist.html">
-                                <i class="fa fa-circle-o"></i> 访问日志
-                            </a>
-                        </li>
-                    </ul>
-                </li>
-                <li class="treeview">
-                    <a href="#">
-                        <i class="fa fa-cube"></i> <span>基础数据</span>
-                        <span class="pull-right-container"><i class="fa fa-angle-left pull-right"></i></span>
-                    </a>
-                    <ul class="treeview-menu">
-                        <li id="system-setting">
-                            <a href="/product/findAll">
-                                <i class="fa fa-circle-o"></i> 产品管理
-                            </a>
-                        </li>
-                        <li id="system-setting">
-                            <a href="all-order-manage-list.html">
-                                <i class="fa fa-circle-o"></i> 订单管理
-                            </a>
-                        </li>
-                    </ul>
-                </li>
-            </ul>
-        </section>
-        <!-- /.sidebar -->
-    </aside>
+    <div th:replace="sidebar.html"></div>
     <!-- 导航侧栏 /-->
     <!-- 内容区域 -->
     <div class="content-wrapper">
@@ -229,13 +114,7 @@
     </div>
     <!-- 内容区域 /-->
     <!-- 底部导航 -->
-    <footer class="main-footer">
-        <div class="pull-right hidden-xs">
-            <b>Version</b> 1.0.8
-        </div>
-        <strong>Copyright &copy; 2014-2017 <a href="http://www.itcast.cn">研究
-            院研发部</a>.</strong> All rights reserved.
-    </footer>
+    <div th:replace="footer.html"></div>
     <!-- 底部导航 /-->
 </div>
 <script src="/plugins/jQuery/jquery-2.2.3.min.js"></script>
